--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,11 @@
         "esModuleInterop": true,
         "isolatedModules": true,
         "jsx": "react",
-        "module": "esnext",
+        "module": "ES2022",
         "moduleResolution": "node",
         "removeComments": true,
         "resolveJsonModule": true,
-        "target": "es5",
+        "target": "ES2022",
         "baseUrl": ".",
         "paths": {
             "@react-pdf-viewer/*": ["packages/*/src"],
